--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
-    implementation group: 'org.ejml', name: 'ejml-simple', version: '0.32'
+    //implementation group: 'org.ejml', name: 'ejml-simple', version: '0.43'
 }
 
 test {
